Changelog Legend:

[+] = Added
[*] = Changed
[^] = Moved
[=] = No Changes
[x] = Deleted
[!] = Bugs

(04/05/2012) - Maintenance Version 1.4.2/3
[x] widgets ul styles CSS
[*] widgets a padding CSS
[^] widgets ul styles to widget-wrapper and widget-wrapper-left
[!] widgets were breaking styles CSS/functions.php
[!] main menu current_page_item CSS
[*] margins for widget titles CSS
[!] featured-title line-height CSS
[*] featured-subtitle padding CSS
[+] clearfix to widget-wrapper
[+] footer a color CSS
[+] post-data a color CSS and font-weight
[+] comment-meta font-size CSS
[x] global links underline
[*] Theme description in style.css
[*] headimg background-repeat none /includes/functions.php
[*] read-more font-weight CSS
[+] widget-wrapper DIV to all default sidebars


(04/01/2012) - Maintenance Version 1.4.0/1
[x] ul children for better CSS efficiancy
[x] ul widget a color
[x] form div margins
[+] ID/class for all widgetized areas
[*] author-meta margins
[*] WP-Core image alignments
[*] top-menu CSS
[*] featured div comments
[!] extra ; in .address CSS
[+] word-wrap to all p's and headings CSS
[x] paddings for global a's CSS
[+] margin-bottom for site-description CSS
[+] font-weight for site-name CSS
[x] header search-box CSS
[x] featured-button CSS
[*] jQuery version in theme-options.php
[x] border in pre CSS
[*] blockquote's CSS
[*] author-meta CSS

(03/27/2012) - Maintenance Version 1.3.8
[*] description typo in style.css
[+] link color in style.css for better visibility
[*] load_theme_textdomain in /includes/functions.php

(03/22/2012) - Maintenance Version 1.3.6
[x] #widgets #s padding in style.css
[+] bbPress breadcrumb compatibility patch by Dan Smith keystonedatabase.com
[+] localization support

(03/21/2012) - Maintenance Version 1.3.4
[!] #widgets p border bug
[x] #widgets p
[+] .textwidget for demo only
[x] .widget-title, .widget-title-home h3 height:23px
[!] Responsive videos

(03/17/2012) - Maintenance Version 1.3.2