@@ -44,31 +44,31 @@
                 echo '<ul class="social-icons">';
 					
                 if ($options['twitter_uid']) echo '<li class="twitter-icon"><a href="' . $options['twitter_uid'] . '">'
-                    .'<img src="' . get_stylesheet_directory_uri() . '/icons/twitter-icon.png" alt="Twitter">'
+                    .'<img src="' . get_stylesheet_directory_uri() . '/icons/twitter-icon.png" width="24px" height="24px" alt="Twitter">'
                     .'</a></li>';
 
                 if ($options['facebook_uid']) echo '<li class="facebook-icon"><a href="' . $options['facebook_uid'] . '">'
-                    .'<img src="' . get_stylesheet_directory_uri() . '/icons/facebook-icon.png" alt="Facebook">'
+                    .'<img src="' . get_stylesheet_directory_uri() . '/icons/facebook-icon.png" width="24px" height="24px" alt="Facebook">'
                     .'</a></li>';
   
                 if ($options['linkedin_uid']) echo '<li class="linkedin-icon"><a href="' . $options['linkedin_uid'] . '">'
-                    .'<img src="' . get_stylesheet_directory_uri() . '/icons/linkedin-icon.png" alt="LinkedIn">'
+                    .'<img src="' . get_stylesheet_directory_uri() . '/icons/linkedin-icon.png" width="24px" height="24px" alt="LinkedIn">'
                     .'</a></li>';
 					
                 if ($options['youtube_uid']) echo '<li class="youtube-icon"><a href="' . $options['youtube_uid'] . '">'
-                    .'<img src="' . get_stylesheet_directory_uri() . '/icons/youtube-icon.png" alt="YouTube">'
+                    .'<img src="' . get_stylesheet_directory_uri() . '/icons/youtube-icon.png" width="24px" height="24px" alt="YouTube">'
                     .'</a></li>';
 					
                 if ($options['stumble_uid']) echo '<li class="stumble-upon-icon"><a href="' . $options['stumble_uid'] . '">'
-                    .'<img src="' . get_stylesheet_directory_uri() . '/icons/stumble-upon-icon.png" alt="YouTube">'
+                    .'<img src="' . get_stylesheet_directory_uri() . '/icons/stumble-upon-icon.png" width="24px" height="24px" alt="StumbleUpon">'
                     .'</a></li>';
 					
                 if ($options['rss_uid']) echo '<li class="rss-feed-icon"><a href="' . $options['rss_uid'] . '">'
-                    .'<img src="' . get_stylesheet_directory_uri() . '/icons/rss-feed-icon.png" alt="RSS Feed">'
+                    .'<img src="' . get_stylesheet_directory_uri() . '/icons/rss-feed-icon.png" width="24px" height="24px" alt="RSS Feed">'
                     .'</a></li>';
        
                 if ($options['google_plus_uid']) echo '<li class="google-plus-icon"><a href="' . $options['google_plus_uid'] . '">'
-                    .'<img src="' . get_stylesheet_directory_uri() . '/icons/googleplus-icon.png" alt="Google Plus">'
+                    .'<img src="' . get_stylesheet_directory_uri() . '/icons/googleplus-icon.png" width="24px" height="24px" alt="Google Plus">'
                     .'</a></li>';
              
                 echo '</ul><!-- end of .social-icons -->';
