@@ -3,13 +3,13 @@
  * Main Widget Template
  *
  *
- * @file           sidebar.php
+ * @file           sidebar-left.php
  * @package        Responsive 
  * @author         Emil Uzelac 
  * @copyright      2003 - 2012 ThemeID
  * @license        license.txt
  * @version        Release: 1.0
- * @filesource     wp-content/themes/responsive/sidebar.php
+ * @filesource     wp-content/themes/responsive/sidebar-left.php
  * @link           http://codex.wordpress.org/Theme_Development#Widgets_.28sidebar.php.29
  * @since          available since Release 1.0
  */
